--- a/src/styles.less
+++ b/src/styles.less
@@ -62,10 +62,10 @@ aside {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: var(--tui-base-09);
-  min-height: 100%;
+  //background-color: var(--tui-base-09);
+  //min-height: 100%;
   min-width: 100%;
-  color: var(--tui-base-02);
+  //color: var(--tui-base-02);
 }
 
 aside > * {
@@ -88,6 +88,15 @@ aside > * {
   display: grid;
   align-items: start;
   //grid-template-rows: 10% 90%;
+  padding: 10px;
+  //background-color: red;
+}
+
+.with__aside {
+  display: grid;
+  justify-content: center;
+  align-items: start;
+  grid-template-columns: 80% auto;
   padding: 10px;
   //background-color: red;
 }
