--- a/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
@@ -1,31 +1,34 @@
 <div class="list-of-items-with-data">
-  @if(data$ | async; as data){
-    @for(item of data; track item.id){
-  <div class="item-with-data-island">
-    <a
-      [href]="formatPath(item)"
-      rel="noreferrer"
-      size="l"
-      target="_self"
-      tuiIsland
-      textAlign="center"
-      [hoverable]="true"
-    >
-      <div class="tui-island__content">
-        <figure class="tui-island__figure">
-          <div class="some-figure"></div>
-        </figure>
-        <div>
-          <h3 class="tui-island__title">
-            {{ item[titleProperty] }}
-          </h3>
-          <p class="tui-island__paragraph">
-            @if(item[paragraphProperty]) { {{ item[paragraphProperty] }} } @else {}
-          </p>
-        </div>
+  @if (data$ | async; as data) {
+    @for (item of data; track item.id) {
+      <div class="item-with-data-island">
+        <a
+          [href]="formatPath(item)"
+          rel="noreferrer"
+          [size]="_size"
+          target="_self"
+          tuiIsland
+          textAlign="center"
+          [hoverable]="hoverable"
+        >
+          <div class="tui-island__content">
+            <figure class="tui-island__figure">
+              <div class="some-figure"></div>
+            </figure>
+            <div>
+              <h3 class="tui-island__title">
+                {{ item[titleProperty] }}
+              </h3>
+              <p class="tui-island__paragraph">
+                @if (item[paragraphProperty]) {
+                  {{ item[paragraphProperty] }}
+                } @else {
+                }
+              </p>
+            </div>
+          </div>
+        </a>
       </div>
-    </a>
-  </div>
     } @empty {
       No Items Found
     }
