--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -22,135 +22,46 @@
       ></app-create-button>
     </div>
 
-    <!--    <div class="filters flex__fullwidth_center">-->
-
-
-    <!--      <form-->
-    <!--        style="padding: 10px"-->
-    <!--        [formGroup]="testForm"-->
-    <!--      >-->
-    <!--        <tui-input-->
-    <!--          formControlName="nameValue"-->
-    <!--        >-->
-    <!--          Search by WEEK-->
-    <!--          <input-->
-    <!--            style="min-width: max-content"-->
-    <!--            (change)="onSearch()"-->
-    <!--            tuiTextfield-->
-    <!--          />-->
-    <!--        </tui-input>-->
-    <!--      </form>-->
-
-    <!--      <form-->
-    <!--        style="padding: 10px"-->
-    <!--        [formGroup]="testForm"-->
-    <!--      >-->
-    <!--        <tui-input-number-->
-    <!--          formControlName="nameValue"-->
-    <!--          class="b-form"-->
-    <!--          (tuiValueChanges)="onSearch()"-->
-    <!--        >-->
-    <!--          WEEK-->
-    <!--        </tui-input-number>-->
-
-    <!--      </form>-->
-
-
-    <!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
-    <!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
-    <!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
-    <!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
-
-
-    <!--    </div>-->
-
-
-    <!--    <div class="search block__fullwidth_center">-->
-
-    <!--          <div class="" style="display: block; padding: 10px; min-width: 100%">-->
-    <!--            <div class="tui-form__row">-->
-    <!--            <form-->
-    <!--              [formGroup]="testForm"-->
-    <!--            >-->
-    <!--                <tui-input-->
-    <!--                  formControlName="nameValue"-->
-    <!--                >-->
-    <!--                  Search by WEEK-->
-    <!--                  <input-->
-    <!--                    style="min-width: max-content"-->
-    <!--                    (change)="onSearch()"-->
-    <!--                    tuiTextfield-->
-    <!--                  />-->
-    <!--                </tui-input>-->
-
-
-    <!--            </form>-->
-    <!--            </div>-->
-    <!--          </div>-->
-
-
-    <!--      <div class="" style="display: block; padding: 10px;">-->
-    <!--        <div class="tui-form__row">-->
-
-    <!--        </div>-->
-    <!--      </div>-->
-
-    <!--    </div>-->
-
-    <!--    @if (matches$ | async; as matches) {-->
-    <!--      @if (matches.length > itemsPerPage) {-->
-    <!--        <div class="pagination" style="display: grid">-->
-    <!--          <tui-pagination-->
-    <!--            [index]="currentPageIndex - 1"-->
-    <!--            [length]="Math.ceil(matches.length / itemsPerPage)"-->
-    <!--            (indexChange)="setPage($event + 1)"-->
-    <!--          ></tui-pagination>-->
-    <!--        </div>-->
-    <!--      }-->
-    <!--    }-->
     <div class="tournament with__aside">
       <div class="one_col_container">
-        <div class="filters flex__fullwidth_center">
-          @if (matches$ | async; as items) {
+        @if (matches$ | async; as items) {
+          <div class="filters flex__fullwidth_center">
             <form
-              class="b-form"
-              [formGroup]="form"
-              style="width: 60%"
-            >
-              <tui-input
-                formControlName="match"
-              >
-                Match Week
-                <tui-data-list-wrapper
-                  *tuiDataList
-                  [itemContent]="stringify | tuiStringifyContent"
-                  [items]="items | tuiFilterByInput: matcherM"
-                ></tui-data-list-wrapper>
-              </tui-input>
-            </form>
-            <form
-              [formGroup]="matchWeekSearchForm"
+              [formGroup]="formWeek"
             >
               <tui-input-number
-                formControlName="matchWeek"
-                class="b-form"
+                formControlName="matchWeekSearch"
                 (tuiValueChanges)="onSearch()"
               >
-                WEEK
+                Search by WEEK
               </tui-input-number>
-
             </form>
-          }
-        </div>
-        <div class="list-of-items-with-data" style="padding: 20px">
-          @if (matches$ | async) {
-            <app-list-of-matches
+
+            <app-form-search-text
               [data$]="matches$"
+              [searchTitle]="'team'"
+              [parameter]="'teams_data.team_a.title + teams_data.team_b.title'"
+              [filter]="'includes'"
+            ></app-form-search-text>
+
+            <app-pagination-with-items-per-page
+              [items$]="matches$"
+            ></app-pagination-with-items-per-page>
+
+
+          </div>
+          <div class="list-of-items-with-data" style="padding: 20px">
+
+            <app-list-of-matches
+              [data$]="paginationService.paginatedItems$"
               [formatPath]='matchHref'
             >
             </app-list-of-matches>
-          }
-        </div>
+
+          </div>
+        } @else {
+          <tui-loader [inheritColor]="true"></tui-loader>
+        }
       </div>
 
 
@@ -164,18 +75,137 @@
       </aside>
     </div>
 
-
-    <!--    <div class="list-of-items-with-data" style="padding: 20px">-->
-    <!--      @if (matches$ | async; as matches) {-->
-    <!--        <app-list-of-matches-->
-    <!--          [data$]="matches | slice: (currentPageIndex - 1) * itemsPerPage : currentPageIndex * itemsPerPage"-->
-    <!--          [formatPath]='matchHref'-->
-    <!--        >-->
-    <!--        </app-list-of-matches>-->
-    <!--      }-->
-    <!--    </div>-->
-
   </div>
 </div>
+
+<!--    <div class="filters flex__fullwidth_center">-->
+
+
+<!--      <form-->
+<!--        style="padding: 10px"-->
+<!--        [formGroup]="testForm"-->
+<!--      >-->
+<!--        <tui-input-->
+<!--          formControlName="nameValue"-->
+<!--        >-->
+<!--          Search by WEEK-->
+<!--          <input-->
+<!--            style="min-width: max-content"-->
+<!--            (change)="onSearch()"-->
+<!--            tuiTextfield-->
+<!--          />-->
+<!--        </tui-input>-->
+<!--      </form>-->
+
+<!--      <form-->
+<!--        style="padding: 10px"-->
+<!--        [formGroup]="testForm"-->
+<!--      >-->
+<!--        <tui-input-number-->
+<!--          formControlName="nameValue"-->
+<!--          class="b-form"-->
+<!--          (tuiValueChanges)="onSearch()"-->
+<!--        >-->
+<!--          WEEK-->
+<!--        </tui-input-number>-->
+
+<!--      </form>-->
+
+
+<!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
+<!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
+<!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
+<!--      <div class="" style="display: grid; padding: 10px">FILTER</div>-->
+
+
+<!--    </div>-->
+
+
+<!--    <div class="search block__fullwidth_center">-->
+
+<!--          <div class="" style="display: block; padding: 10px; min-width: 100%">-->
+<!--            <div class="tui-form__row">-->
+<!--            <form-->
+<!--              [formGroup]="testForm"-->
+<!--            >-->
+<!--                <tui-input-->
+<!--                  formControlName="nameValue"-->
+<!--                >-->
+<!--                  Search by WEEK-->
+<!--                  <input-->
+<!--                    style="min-width: max-content"-->
+<!--                    (change)="onSearch()"-->
+<!--                    tuiTextfield-->
+<!--                  />-->
+<!--                </tui-input>-->
+
+
+<!--            </form>-->
+<!--            </div>-->
+<!--          </div>-->
+
+
+<!--      <div class="" style="display: block; padding: 10px;">-->
+<!--        <div class="tui-form__row">-->
+
+<!--        </div>-->
+<!--      </div>-->
+
+<!--    </div>-->
+
+<!--    @if (matches$ | async; as matches) {-->
+<!--      @if (matches.length > itemsPerPage) {-->
+<!--        <div class="pagination" style="display: grid">-->
+<!--          <tui-pagination-->
+<!--            [index]="currentPageIndex - 1"-->
+<!--            [length]="Math.ceil(matches.length / itemsPerPage)"-->
+<!--            (indexChange)="setPage($event + 1)"-->
+<!--          ></tui-pagination>-->
+<!--        </div>-->
+<!--      }-->
+<!--    }-->
+
+
+<!--            <form-->
+<!--              class="b-form"-->
+<!--              [formGroup]="form"-->
+<!--              style="width: 60%"-->
+<!--            >-->
+<!--              <tui-input-->
+<!--                formControlName="match"-->
+<!--              >-->
+<!--                Match Week-->
+<!--                <tui-data-list-wrapper-->
+<!--                  *tuiDataList-->
+<!--                  [itemContent]="stringify | tuiStringifyContent"-->
+<!--                  [items]="items | tuiFilterByInput: matcherM"-->
+<!--                ></tui-data-list-wrapper>-->
+<!--              </tui-input>-->
+<!--            </form>-->
+<!--            <form-->
+<!--              [formGroup]="matchWeekSearchForm"-->
+<!--            >-->
+<!--              &lt;!&ndash;              <tui-input-number&ndash;&gt;-->
+<!--              &lt;!&ndash;                formControlName="matchWeek"&ndash;&gt;-->
+<!--              &lt;!&ndash;                class="b-form"&ndash;&gt;-->
+<!--              &lt;!&ndash;                (tuiValueChanges)="onSearch()"&ndash;&gt;-->
+<!--              &lt;!&ndash;              >&ndash;&gt;-->
+<!--              &lt;!&ndash;                WEEK&ndash;&gt;-->
+<!--              &lt;!&ndash;              </tui-input-number>&ndash;&gt;-->
+
+<!--            </form>-->
+
+
+<!--    <div class="list-of-items-with-data" style="padding: 20px">-->
+<!--      @if (matches$ | async; as matches) {-->
+<!--        <app-list-of-matches-->
+<!--          [data$]="matches | slice: (currentPageIndex - 1) * itemsPerPage : currentPageIndex * itemsPerPage"-->
+<!--          [formatPath]='matchHref'-->
+<!--        >-->
+<!--        </app-list-of-matches>-->
+<!--      }-->
+<!--    </div>-->
+
+
 
 
