--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -1,11 +1,49 @@
 <div class="match content__body">
   <div class="one_col_container">
-    @if (match$ | async; as match) {
-      <h1>
-        {{ match.match.match_date | date:"dd MMM yyyy, HH:mm" }}
-      </h1>
-    } @else {
-      <tui-loader></tui-loader>
-    }
+    <div class="item-with-data-island">
+      @if (match$ | async; as match) {
+        <tui-island
+          size="l"
+          textAlign="center"
+        >
+          <div class="tui-island__content">
+            <!--          <figure class="tui-island__figure">-->
+            <!--            <div class="some-figure">WEEK {{ match.match?.week }}</div>-->
+            <!--          </figure>-->
+            <div>
+              <h3 class="tui-island__title content__body__title__center">
+                {{ match.teams_data?.team_a?.title }} vs {{ match.teams_data?.team_b?.title }}
+              </h3>
+              <h4 class="tui-island__title content__body__title__center">
+                {{ match.match_data?.score_team_a }} : {{ match.match_data?.score_team_b }}
+              </h4>
+              <p class="tui-island__paragraph">{{ match.match?.match_date | date:"dd MMM yyyy, HH:mm" }}</p>
+              <button
+                appearance="flat"
+                size="xl"
+                tuiButton
+                type="button"
+                class="tui-island__footer-button"
+              >
+                EDIT
+              </button>
+              <button
+                appearance="flat"
+                size="xl"
+                tuiButton
+                type="button"
+                class="tui-island__footer-button"
+                (click)="navigateToLink()"
+              >
+                ADMIN SCOREBOARD
+              </button>
+
+            </div>
+          </div>
+        </tui-island>
+      } @else {
+        <tui-loader></tui-loader>
+      }
+    </div>
   </div>
 </div>
