added add tournament

--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -33,9 +33,19 @@
                 tuiButton
                 type="button"
                 class="tui-island__footer-button"
-                (click)="navigateToLink()"
+                (click)="navigateToScoreboardAdmin()"
               >
-                ADMIN SCOREBOARD
+                SCOREBOARD ADMIN
+              </button>
+              <button
+                appearance="flat"
+                size="xl"
+                tuiButton
+                type="button"
+                class="tui-island__footer-button"
+                (click)="navigateToScoreboardDisplay()"
+              >
+                SCOREBOARD VIEW
               </button>
 
             </div>
