--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -8,9 +8,22 @@
         <app-body-title
           titleMany='tournaments'
         ></app-body-title>
-        <app-create-button
-          [title]="'tournament'"
-        ></app-create-button>
+        {{ sport.id }}
+        <app-tournament-add-edit-form
+          [sport_Id]="sport.id"
+          [addTournament]="tournamentService.addTournament.bind(tournamentService)"
+        ></app-tournament-add-edit-form>
+        <!--        <button-->
+        <!--          appearance="create"-->
+        <!--          size="m"-->
+        <!--          tuiButton-->
+        <!--          (click)="showDialog()"-->
+        <!--        >NEW TOURNAMENT-->
+        <!--        </button>-->
+        <!--                <app-create-button-->
+        <!--                  [title]="'tournament'"-->
+        <!--                  (click)="addTournament()"-->
+        <!--                ></app-create-button>-->
 
         <app-sport-with-season-dropdown
           [sportId]="sport.id"
