--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -13,15 +13,26 @@
 
 <div class="tournament content__body">
   <div class="one_col_container">
-    <div class="tournament content__body__title">
-      <app-body-title
-        titleMany='matches'
-      ></app-body-title>
-      <app-create-button
-        title='match'
-      ></app-create-button>
-    </div>
-
+    @if (this.tournament$ | async; as tournament) {
+      <div class="tournament content__body__title__flex">
+        <app-body-title
+          titleMany='matches'
+        ></app-body-title>
+        <app-create-button
+          title='match'
+        ></app-create-button>
+        <button
+          appearance="secondary-destructive"
+          size="m"
+          tuiButton
+          type="button"
+          (click)="onDelete()"
+        >DELETE TOURNAMENT
+        </button>
+      </div>
+    } @else {
+      <tui-loader [inheritColor]="true"></tui-loader>
+    }
     <div class="tournament with__aside">
       <div class="one_col_container">
         @if (matches$ | async; as items) {
