--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -36,12 +36,14 @@
           [searchTitle]="'tournament title'"
           [parameter]="'title'"
         ></app-form-search-text>
-
-        <app-list-of-items-island
-          [data$]="paginationService.paginatedItems$"
-          [formatPath]="tournamentItemHref"
-          [titleProperty]="islandTitleProperty"
-        ></app-list-of-items-island>
+        @if (season$ | async; as season) {
+          <app-list-of-items-island
+            [itemData]="season"
+            [data$]="paginationService.paginatedItems$"
+            [formatPath]="tournamentItemHref"
+            [titleProperty]="islandTitleProperty"
+          ></app-list-of-items-island>
+        }
       } @else {
         <tui-loader [inheritColor]="true"></tui-loader>
       }
