--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -47,6 +47,11 @@
               >
                 SCOREBOARD VIEW
               </button>
+              <app-delete-dialog
+                [item]="'Match'"
+                [buttonClass]="'tui-island__footer-button'"
+                (delete)="onDelete()"
+              ></app-delete-dialog>
 
             </div>
           </div>
