--- a/src/styles.less
+++ b/src/styles.less
@@ -109,6 +109,14 @@ aside > * {
   background-color: var(--tui-success-bg-night-hover);
 }
 
+.content__title_description {
+  //font-size: 30px;
+  display: grid;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
+  //background-color: var(--tui-success-bg-night-hover);
+}
+
 .content__body__title {
   display: grid;
   grid-template-columns: 60% 22%;
