--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -3,6 +3,7 @@
     <h3 class="tui-text_h3">
       {{ tournament.title | uppercase }}
     </h3>
+    <p class="content__title_description">{{ tournament.description }}</p>
   } @else {
     <h3 class="tui-text_h3">
       <tui-loader [inheritColor]="true"></tui-loader>
@@ -21,9 +22,13 @@
         <app-create-button
           title='match'
         ></app-create-button>
-        <app-tournament-delete-form
+        <app-delete-dialog
+          [item]="'Tournament'"
           (delete)="onDelete()"
-        ></app-tournament-delete-form>
+        ></app-delete-dialog>
+        <!--        <app-tournament-delete-form-->
+        <!--          (delete)="onDelete()"-->
+        <!--        ></app-tournament-delete-form>-->
         <!--        <button-->
         <!--          appearance="secondary-destructive"-->
         <!--          size="m"-->
