add matches refactor backend addfulldata

--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -23,7 +23,7 @@
             <app-add-edit-match
               [tournamentId]="tournament.id"
               [teams$]="teams$"
-              [addMatch]="matchService.addMatch.bind(matchService)"
+              [addMatch]="matchWithFullDataService.addMatchWithFullData.bind(matchWithFullDataService)"
             ></app-add-edit-match>
           }
         } @else {
