--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -43,66 +43,66 @@
         [error]="[] | tuiFieldError | async"
       ></tui-error>
     </div>
+
     @if (teams$ | async) {
+      <div class="tui-form__row" style="display: flex; justify-content: center;">
 
-      <tui-select
-        *tuiLet="teams$ | async as items"
-        class="b-form"
-        formControlName="team_a"
-      >
-        Select HOME team
-        <tui-data-list-wrapper
-          *tuiDataList
-          size="l"
-          [itemContent]="content"
-          [items]="items"
-        ></tui-data-list-wrapper>
+        <tui-select
+          *tuiLet="teams$ | async as items"
+          class="b-form"
+          formControlName="team_a"
+          style="padding-left: 10px; padding-right: 10px;"
+        >
+          Select HOME team
+          <tui-data-list-wrapper
+            *tuiDataList
+            size="l"
+            [itemContent]="content"
+            [items]="items"
+          ></tui-data-list-wrapper>
 
-      </tui-select>
+        </tui-select>
 
-      <ng-template
-        #content
-        let-data
-      >
-        <div class="template">
-          <tui-avatar
-            size="xs"
-            class="avatar"
-            [text]="data.title.toString()"
-          ></tui-avatar>
-          <div class="name">{{ data.title }}</div>
-        </div>
-      </ng-template>
+        <ng-template
+          #content
+          let-data
+        >
+          <div class="template">
 
-      <tui-select
-        *tuiLet="teams$ | async as items"
-        class="b-form"
-        formControlName="team_b"
-      >
-        Select AWAY team
-        <tui-data-list-wrapper
-          *tuiDataList
-          size="l"
-          [itemContent]="content"
-          [items]="items"
-        ></tui-data-list-wrapper>
+            <div>{{ data.title }}</div>
+          </div>
+        </ng-template>
 
-      </tui-select>
+        <tui-select
+          *tuiLet="teams$ | async as items"
+          class="b-form"
+          formControlName="team_b"
+          style="padding-left: 10px; padding-right: 10px;"
+        >
+          Select AWAY team
+          <tui-data-list-wrapper
+            *tuiDataList
+            size="l"
+            [itemContent]="content"
+            [items]="items"
+          ></tui-data-list-wrapper>
 
-      <ng-template
-        #content
-        let-data
-      >
-        <div class="template">
-          <tui-avatar
-            size="xs"
-            class="avatar"
-            [text]="data.title.toString()"
-          ></tui-avatar>
-          <div class="name">{{ data.title }}</div>
-        </div>
-      </ng-template>
+        </tui-select>
 
+        <!--        <ng-template-->
+        <!--          #content-->
+        <!--          let-data-->
+        <!--        >-->
+        <!--          <div class="template">-->
+        <!--            <tui-avatar-->
+        <!--              size="l"-->
+        <!--              class="avatar"-->
+        <!--              [text]="data.title.toString()"-->
+        <!--            ></tui-avatar>-->
+        <!--            <div class="name">{{ data.title }}</div>-->
+        <!--          </div>-->
+        <!--        </ng-template>-->
+      </div>
     }
 
     <div class="tui-form__row">
