--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -1,5 +1,5 @@
 <div class="sport content__title">
-  @if (item$ | async; as item) {
+  @if (sport$ | async; as item) {
     <h3 class="tui-text_h3">{{ item.title | uppercase }}</h3>
   } @else {
     <tui-loader [inheritColor]="true"></tui-loader>
