--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -1,5 +1,10 @@
-<app-list-of-teams
-  [teams$]="teams$"
-  [formatPath]="teamItemHref"
-  [titleProperty]="islandTeamTitleProperty"
-></app-list-of-teams>
+<div class="tournament content__body">
+  <div class="one_col_container">
+    <app-list-of-teams
+      [sportId]="sportId"
+      [teams$]="teams$"
+      [formatPath]="teamItemHref"
+      [titleProperty]="islandTeamTitleProperty"
+    ></app-list-of-teams>
+  </div>
+</div>
