--- a/src/app/components/team/list-of-teams/list-of-teams.component.html
+++ b/src/app/components/team/list-of-teams/list-of-teams.component.html
@@ -24,12 +24,12 @@
 ></app-form-search-text>
 
 @if (teams$ | async) {
-  <app-list-of-teams-small
+  <app-list-of-teams-with-city
     [teams$]="paginationService.paginatedItems$"
     [formatPath]="formatPath"
     [titleProperty]="titleProperty"
     [_size]="'l'"
-  ></app-list-of-teams-small>
+  ></app-list-of-teams-with-city>
   <!--  <app-list-of-items-island-->
     <!--    [data$]="paginationService.paginatedItems$"-->
     <!--    [formatPath]="formatPath"-->
