--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -12,12 +12,12 @@
             <!--          </figure>-->
             <div>
               <h3 class="tui-island__title content__body__title__center">
-                {{ match.teams_data?.team_a?.title }} vs {{ match.teams_data?.team_b?.title }}
+                {{ match.teams_data.team_a.title }} vs {{ match.teams_data.team_b.title }}
               </h3>
               <h4 class="tui-island__title content__body__title__center">
-                {{ match.match_data?.score_team_a }} : {{ match.match_data?.score_team_b }}
+                {{ match.match_data.score_team_a }} : {{ match.match_data.score_team_b }}
               </h4>
-              <p class="tui-island__paragraph">{{ match.match?.match_date | date:"dd MMM yyyy, HH:mm" }}</p>
+              <p class="tui-island__paragraph">{{ match.match.match_date | date:"dd MMM yyyy, HH:mm" }}</p>
               <button
                 appearance="flat"
                 size="xl"
