--- a/src/styles.less
+++ b/src/styles.less
@@ -58,11 +58,12 @@ tui-root {
 
 aside {
   display: flex;
-  padding: 20px;
+  //padding: 20px;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  //background-color: var(--tui-base-09);
+  //justify-content: stretch;
+  //align-items: stretch;
+  align-content: space-evenly;
+  //background-color:  var(--tui-base-09);
   //min-height: 100%;
   min-width: 100%;
   //color: var(--tui-base-02);
