teamtournament front and backend

--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -95,6 +95,7 @@
                     tuiButton
                     type="button"
                     style="width: 80%"
+                    (click)="navigateTo(teamItemHref(team))"
                   > {{ team.title }}
                   </button>
                   <button
