--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -29,6 +29,9 @@
         } @else {
           <tui-loader></tui-loader>
         }
+        <app-delete-button
+          [item]="'Tournament'"
+        ></app-delete-button>
         <app-delete-dialog
           [item]="'Tournament'"
           (delete)="onDelete()"
